test-cert-manager.yaml
# Purpose of this yaml is to check if cert-manager works correctly
# source : https://docs.cert-manager.io/en/latest/getting-started/install/kubernetes.html#verifying-the-installation
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
