Ingress-version2.yml
# Nouvelle version 
# source : https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: labtest.specialk8s.shop
    http:
      paths:
      - path: /
        backend:
          serviceName: service-basic-nginx
          servicePort: 80
