Ingress-version3-selfsigned.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - test.specialk8s.shop
  rules:
  - host: test.specialk8s.shop
    http:
      paths:
      - path: /
        backend:
          serviceName: service-basic-nginx
          servicePort: 80
