Ingress-version4-letsencrypt.yml
# Source : https://raw.githubusercontent.com/jetstack/cert-manager/release-0.11/docs/tutorials/acme/quick-start/example/ingress-tls-final.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - labtest.specialk8s.shop
    secretName: labtest.specialk8s.shop-tls
  rules:
  - host: labtest.specialk8s.shop
    http:
      paths:
      - path: /
        backend:
          serviceName: service-basic-nginx
          servicePort: 80
