Ingress-version5-letsencrypt-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    # add an annotation indicating the issuer to use for certificate
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - test.specialk8s.shop
      secretName: test.specialk8s.shop-tls
  rules:
  - host: test.specialk8s.shop
    http:
      paths:
      - path: /
        backend:
          serviceName: service-basic-nginx
          servicePort: 80
